--- a/templates/blog-list.html
+++ b/templates/blog-list.html
@@ -1,4 +1,6 @@
-<div class="">
-	<h1 class="new-class">{{title}}</h1>
-	<button ng-click="clickTest()">Click me</button>
-</div>
+<h1>Blog List</h1>
+<ul>
+	<li ng-repeat="item in items">{{item.title}}: {{item.description}}</li>
+</ul>
+
+<span>{{items.length}} itens curretly</span>
